@@ -5,5 +5,8 @@
   .tree-download-holder
     = render 'projects/repositories/download_archive', ref: @ref, btn_class: 'btn-group-small pull-right hidden-xs hidden-sm', split_button: true
 
+- if allowed_tree_edit?
+  = render 'projects/tree/upload'
+
 #tree-holder.tree-holder.clearfix
   = render "tree", tree: @tree
